<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.JokeListFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/query_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp"
        app:contentPadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/blacklist_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/noto_sans_bold_italic"
                android:text="@string/blacklist_label"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/blacklist_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/blacklist_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blacklist_label"
                >
            <com.google.android.material.chip.Chip
                android:id="@+id/bl_nsfw_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:checkable="true"
                android:text="@string/nsfw_block"
               />

            <com.google.android.material.chip.Chip
                android:id="@+id/bl_religious_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:checkable="true"
                android:text="@string/religious_block"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/bl_political_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:checkable="true"
                android:text="@string/political_block"
               />

            <com.google.android.material.chip.Chip
                android:id="@+id/bl_racist_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:checkable="true"
                android:text="@string/racist_block"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/bl_sexist_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:checkable="true"
                android:text="@string/sexist_block"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/bl_explicit_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:checkable="true"
                android:text="@string/explicit_block"
                />
            </com.google.android.material.chip.ChipGroup>
            <TextView
                android:id="@+id/joke_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/noto_sans_bold_italic"
                android:text="@string/joke_type_label"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/blacklist_label"
                app:layout_constraintTop_toBottomOf="@+id/blacklist_group" />

            <com.google.android.material.chip.Chip
                android:id="@+id/type_single_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:checkable="true"
                android:checked="true"
                android:text="@string/single_joke_type"
                app:layout_constraintStart_toStartOf="@+id/joke_type_label"
                app:layout_constraintTop_toBottomOf="@+id/joke_type_label" />

            <com.google.android.material.chip.Chip
                android:id="@+id/type_twopart_chip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:checkable="true"
                android:text="@string/twopart_joke_type"
                app:layout_constraintStart_toEndOf="@+id/type_single_chip"
                app:layout_constraintTop_toTopOf="@+id/type_single_chip" />

            <TextView
                android:id="@+id/jokes_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/noto_sans_bold_italic"
                android:text="@string/number_of_jokes_label"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/type_twopart_chip"
                app:layout_constraintTop_toTopOf="@+id/joke_type_label" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/amount_group"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/jokes_number_label"
                app:layout_constraintTop_toTopOf="@+id/type_single_chip"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/jokes_4_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:checkable="true"
                    android:checked="true"
                    android:minWidth="56dp"
                    android:text="4"
                    android:textAlignment="center"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/jokes_6_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:checkable="true"
                    android:checked="false"
                    android:text="6"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/jokes_8_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:checkable="true"
                    android:checked="false"
                    android:text="8"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/jokes_10_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:checkable="true"
                    android:checked="false"
                    android:text="10"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.chip.ChipGroup>

            <Button
                android:id="@+id/get_jokes_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/get_jokes_txt"
                app:icon="@drawable/ic_joke"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type_twopart_chip" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/query_cardview">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/jokesRecyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="5"
                tools:listitem="@layout/joke_list_item" />

            <ProgressBar
                android:id="@+id/pendingIndicator"
                style="?android:attr/progressBarStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>